<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.azzam.notesapp.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.azzam.notesapp.presentation.add.AddFragment"
        android:label="@string/txt_add"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.azzam.notesapp.presentation.detail.DetailFragment"
        android:label="@string/txt_detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="notes"
            app:argType="com.azzam.notesapp.data.local.Notes" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.azzam.notesapp.presentation.update.UpdateFragment"
        android:label="@string/txt_update"
        tools:layout="@layout/fragment_update">
        <action
            android:id="@+id/action_updateFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>