<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="updateArgs"
            type="com.azzam.notesapp.presentation.update.UpdateFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.update.UpdateFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_light_gray"
            app:layout_constraintBottom_toBottomOf="@id/edt_title_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edt_title_update" />

        <EditText
            android:id="@+id/edt_title_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_custom_input"
            android:ems="10"
            android:hint="@string/txt_title"
            android:text="@{updateArgs.notes.title}"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@id/toolbar_update" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_light_gray"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/edt_title_update">

            <TextView
                android:id="@+id/tv_priority_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/txt_priority"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/cv_priority_update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cv_priority_update" />

            <TextView
                android:id="@+id/tv_date_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/txt_date"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/cv_date_update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cv_date_update" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_priority_update"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/priority_indicator"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="8dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardCornerRadius="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/spinner_priorities_update"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_priorities_update"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:entries="@array/priorities"
                        android:parsePriorityToInt="@{updateArgs.notes.priority}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/priority_indicator"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_date_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_priority_update">

                <TextClock
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:format12Hour="EEE, MMM d, ''yy"
                    android:format24Hour="EEE, MMM d, ''yy"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edt_description_update"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_custom_input"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/txt_description"
            android:text="@{updateArgs.notes.desc}"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>